
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.3 (Development, See CVS) ----

2003-06-11, Kato
  Audited and updated security fix, added some additional items to the secure list
    - zentrack/includes/session_start.php 1.17
  Fixed some confusion in the egate script caused by magic_quotes_gpc = On
  that caused ticket create to fail if quotes were present in body
    - zentrack/includes/egate_utils.php 1.33

2003-06-11, MLively
  Retweaked fix for security update to include login_id
  - zentrack/includes/session_start.php 1.16

----- V2.4.2 (Development, See CVS) ----

2003-05-28, Rob Hillis
  Tweak fix for security update
    - zentrack/includes/session_start.php 1.13
  Fix minor syntax error
    - zentrack/includes/templates/binForm.php 1.5
  Correct ticket sort order when searching for tickets.
    - zentrack/includes/zenTrack.class 1.10
  Show correct details in notification email when a ticket is assigned
    - zentrack/includes/zenTrack.class 1.109

2003-05-27, Rob Hillis
  Fixed potential security hole
    - zentrack/includes/session_start.php 1.12

2003-05-25, Rob Hillis
  Removed apparent accidental commit to zenTrack.class
  and commit diffed language files.
    - zentrack/includes/zenTrack.class 1.108
    - zentrack/includes/translations/english.trans 1.4
    - zentrack/includes/translations/french.trans 1.4
    - zentrack/includes/translations/german.trans 1.4
    - zentrack/includes/translations/portuguese.trans 1.2
    - zentrack/includes/translations/spanish.trans 1.4
    - zentrack/includes/translations/swedish.trans 1.3

2003-05-23, William L. Terry
  Updated priority sort for project tasks
    - zentrack/includes/zenTrack.class 1.107
 
2003-05-22, Rob Hillis
  Added Portuguese translation